New html files and Images

--- a/index.html
+++ b/index.html
@@ -34,8 +34,8 @@
       <div>
         <ul id="navbar">
           <li><a class="active" href="index.html">Home</a></li>
-          <li><a href="shop.html">What We Do</a></li>
-          <li><a href="blog.html">Case Studies</a></li>
+          <li><a href="features.html">What We Do</a></li>
+          <li><a href="case.html">Case Studies</a></li>
           <li><a href="about.html">About Us</a></li>
           <li><a href="contact.html">Contact</a></li>
           <a href="#" id="close"><i class="fa fa-times"></i></a>
@@ -130,7 +130,7 @@
               <h1>How we do it</h1>
 
               <div class="about-link">
-                <a href="#">
+                <a href="features.html">
                   <button class="normal">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                   </button>
@@ -224,7 +224,7 @@
             </div>
           </div>
 
-          <div class="col-10">
+          <div class="col-lg-10">
             <div class="gallery-title">
               <h1>Case Studies</h1>
               <div class="gallery-link">
