--- a/case.html
+++ b/case.html
@@ -55,6 +55,104 @@
       </h1>
     </section>
 
+    <section id="case">
+      <div class="container">
+        <div class="row">
+          <div class="col-lg-2">
+            <div class="title">
+              <h6>01</h6>
+              <p>Portfolio</p>
+            </div>
+          </div>
+
+          <div class="col-lg-10">
+            <div class="case-title">
+              <h1>Connecting Clients</h1>
+            </div>
+            <!-- first row -->
+            <div class="row">
+              <div class="col-lg-8 col-sm-12">
+                <div class="card" id="card1">
+                  <div class="card-body">
+                    <p class="card-text">
+                      Innovative strategies
+                      <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-sm-12">
+                <div class="case-logo">
+                  <img src="Img/logo1.png" alt="" />
+                </div>
+              </div>
+            </div>
+
+            <!-- second-row -->
+            <div class="row" id="column2">
+              <div class="col-lg-4 col-sm-12">
+                <div class="case-logo">
+                  <img src="Img/logo2.png" alt="" />
+                </div>
+              </div>
+
+              <div class="col-lg-8 col-sm-12">
+                <div class="card" id="card2">
+                  <div class="card-body">
+                    <p class="card-text">
+                      Innovative strategies
+                      <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+
+            <!-- third row -->
+            <div class="row">
+              <div class="col-lg-8 col-sm-12">
+                <div class="card" id="card3">
+                  <div class="card-body">
+                    <p class="card-text">
+                      Personalised tactics
+                      <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </p>
+                  </div>
+                </div>
+              </div>
+
+              <div class="col-lg-4 col-sm-12">
+                <div class="case-logo">
+                  <img src="Img/logo6.png" alt="" />
+                </div>
+              </div>
+            </div>
+
+            <!-- fourth row  -->
+            <div class="row" id="column2">
+              <div class="col-lg-4 col-sm-12">
+                <div class="case-logo">
+                  <img src="Img/logo8.png" alt="" />
+                </div>
+              </div>
+
+              <div class="col-lg-8 col-sm-12">
+                <div class="card" id="card4">
+                  <div class="card-body">
+                    <p class="card-text">
+                      Results-Oriented Solutions
+                      <i class="fa fa-arrow-right" aria-hidden="true"></i>
+                    </p>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
     <!-- footer -->
     <footer>
       <div class="container">
