--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
             </div>
 
             <!-- second-row -->
-            <div class="row">
+            <div class="row" id="column2">
               <div class="col-lg-4 col-sm-12">
                 <div class="about-img">
                   <img src="Img/banner1.jpg" alt="" />
