--- a/case.html
+++ b/case.html
@@ -101,7 +101,7 @@
                 <div class="card" id="card2">
                   <div class="card-body">
                     <p class="card-text">
-                      Innovative strategies
+                      Strategic insights
                       <i class="fa fa-arrow-right" aria-hidden="true"></i>
                     </p>
                   </div>
