--- a/index.html
+++ b/index.html
@@ -71,41 +71,47 @@
             <div class="card-group">
               <div class="card">
                 <div class="card-body">
-                  <h1 class="card-title">Demand Generation</h1>
-                  <h5 class="card-sub-title">
-                    When your company needs to lorem
-                  </h5>
-                  <p class="card-text">
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim.
-                  </p>
+                  <h1 class="card-title">Branding Services</h1>
+                  <ul class="card-text">
+                    <li>Developing and establishing brand identity</li>
+                    <li>Creating a unique and compelling brand message</li>
+                    <li>Design and visual identity</li>
+                  </ul>
                 </div>
               </div>
               <div class="card">
                 <div class="card-body">
-                  <h1 class="card-title">Brand Acceleration</h1>
-                  <h5 class="card-sub-title">
-                    When your company needs to lorem
-                  </h5>
-                  <p class="card-text">
-                    Minim ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad mlorem nim
-                  </p>
+                  <h1 class="card-title">Design Services</h1>
+                  <ul class="card-text">
+                    <li>Graphic design</li>
+                    <li>Utilizing the latest design tools and techniques</li>
+                    <li>Creating visually appealing and engaging designs</li>
+                  </ul>
                 </div>
               </div>
               <div class="card">
                 <div class="card-body">
-                  <h1 class="card-title">Technology Performance</h1>
-                  <h5 class="card-sub-title">
-                    When your company needs to lorem
-                  </h5>
-                  <p class="card-text">
-                    Minim ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad mlorem nim
-                  </p>
+                  <h1 class="card-title">Digital Marketing</h1>
+
+                  <ul class="card-text">
+                    <li>Search engine optimization (SEO)</li>
+                    <li>Media buying</li>
+                    <li>Pay-per-click (PPC) advertising</li>
+                    <li>Social media marketing</li>
+                    <li>Email marketing</li>
+                    <li>Content marketing</li>
+                    <li>Influencer marketing and management</li>
+                  </ul>
+                </div>
+              </div>
+              <div class="card">
+                <div class="card-body">
+                  <h1 class="card-title">Additional Services</h1>
+                  <ul class="card-text">
+                    <li>Web design and development</li>
+                    <li>Video creation and animation</li>
+                    <li>Market and event activations</li>
+                  </ul>
                 </div>
               </div>
             </div>
@@ -142,13 +148,14 @@
               <div class="col-lg-8 col-sm-12">
                 <div class="card">
                   <div class="card-body">
-                    <h6 class="card-index">Gain Digital Advantage</h6>
-                    <h3 class="card-title">Innovative strategies</h3>
+                    <h3 class="card-title">Strategy and Planning</h3>
                     <p class="card-text">
-                      Proin gravida nibh vel velit auctor aliquet. Aenean
-                      sollicitudin, lorem quis bibendum auctor, nisi elit
-                      consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-                      odio sit amet nibh vulputate cursus a sit amet mauris.
+                      Our process begins with a strategic and collaborative
+                      approach to lay the foundation for success. We take the
+                      time to understand your business, target audience, and
+                      goals. Through research and in-depth discussions, we
+                      develop a comprehensive strategic plan that aligns with
+                      your vision and objectives.
                     </p>
                   </div>
                 </div>
@@ -172,13 +179,16 @@
               <div class="col-lg-8 col-sm-12" id="card">
                 <div class="card">
                   <div class="card-body">
-                    <h6 class="card-index">Result Oriented Solutions</h6>
-                    <h3 class="card-title">Strategic Insights</h3>
+                    <h3 class="card-title">Creative Execution</h3>
                     <p class="card-text">
-                      Proin gravida nibh vel velit auctor aliquet. Aenean
-                      sollicitudin, lorem quis bibendum auctor, nisi elit
-                      consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-                      odio sit amet nibh vulputate cursus a sit amet mauris.
+                      Once the strategic plan is in place, our team of talented
+                      designers, marketers, and strategists bring your vision to
+                      life. We leverage our expertise in video creation,
+                      animation, graphic design, web development, and digital
+                      marketing to create visually compelling and engaging
+                      content. We collaborate closely with you to ensure the
+                      creative concepts align with your brand and resonate with
+                      your target audience.
                     </p>
                   </div>
                 </div>
@@ -190,13 +200,16 @@
               <div class="col-lg-8 col-sm-12">
                 <div class="card">
                   <div class="card-body">
-                    <h6 class="card-index">From Art to Science</h6>
-                    <h3 class="card-title">Personalized tactics</h3>
+                    <h3 class="card-title">Delivery and Support:</h3>
                     <p class="card-text">
-                      Proin gravida nibh vel velit auctor aliquet. Aenean
-                      sollicitudin, lorem quis bibendum auctor, nisi elit
-                      consequat ipsum, nec sagittis sem nibh id elit. Duis sed
-                      odio sit amet nibh vulputate cursus a sit amet mauris.
+                      Timely delivery and ongoing support are paramount to our
+                      commitment to excellence. We work diligently to deliver
+                      your project on time without compromising on quality.
+                      Throughout the process, we maintain open lines of
+                      communication to provide regular updates and seek your
+                      feedback. Even after the project is completed, we offer
+                      post-project support to address any questions or concerns
+                      you may have.
                     </p>
                   </div>
                 </div>
@@ -228,7 +241,7 @@
             <div class="gallery-title">
               <h1>Case Studies</h1>
               <div class="gallery-link">
-                <a href="#">
+                <a href="case.html">
                   <button class="normal">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                   </button>
@@ -280,7 +293,7 @@
             <div class="feat-title">
               <h1>Who we are</h1>
               <div class="feat-link">
-                <a href="#">
+                <a href="about.html">
                   <button class="normal">
                     <i class="fa fa-angle-right" aria-hidden="true"></i>
                   </button>
@@ -289,12 +302,12 @@
             </div>
 
             <div class="feat-text">
-              <div class="topic">
+              <!-- <div class="topic">
                 <h3>
                   Excepteur sint occaecat cupidatat non proident, sunt in culpa
                   qui officia deserunt mollit anim id est laborum.
                 </h3>
-              </div>
+              </div> -->
 
               <div class="row">
                 <div class="col-lg-4 col-sm-12">
@@ -303,22 +316,29 @@
 
                 <div class="col-lg-8 col-sm-12">
                   <p>
-                    Lorem ipsum dolor sit amet, consectetur adipisicing elit,
-                    sed do eiusmod tempor incididunt ut labore et dolore magna
-                    aliqua. Ut enim ad minim veniam, quis nostrud exercitation
-                    ullamco laboris nisi ut aliquip ex ea commodo consequat.
-                    Duis aute irure dolor in reprehenderit in voluptate velit
-                    esse cillum dolore eu fugiat nulla pariatur. Excepteur sint
-                    occaecat cupidatat non proident, sunt in culpa qui officia
-                    deserunt mollit anim id est laborum.
+                    At Out of the Box (OOTB), we are an innovative marketing and
+                    branding agency committed to helping businesses unlock their
+                    potential. With a passion for creativity and a focus on
+                    excellence, we deliver tailored solutions that drive growth
+                    and make a lasting impact. Our collaborative approach brings
+                    together a team of skilled professionals in video creation,
+                    animation, design, web development, and digital marketing.
+                    By thinking outside the box, we develop strategies and
+                    campaigns that captivate audiences. Our mission is to
+                    empower businesses to thrive in the digital age by crafting
+                    compelling narratives that resonate with target audiences.
+                    With creativity, innovation, and strategic thinking, we
+                    build connections, drive engagement, and achieve tangible
+                    results. Join us on this journey to unlock the full
+                    potential of your brand.
                   </p>
 
-                  <p>
+                  <!-- <p>
                     Ut enim ad minim veniam, quis nostrud exercitation ullamco
                     laboris nisi ut aliquip ex ea commodo consequat. Duis aute
                     irure dolor in reprehenderit in voluptate velit esse cillum
                     dolore eu fugiat nulla pariatur.
-                  </p>
+                  </p> -->
                 </div>
               </div>
             </div>
