features page new changes

--- a/features.html
+++ b/features.html
@@ -73,7 +73,7 @@
             </div>
             <!-- first row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Needs Assessment and Analysis</h3>
@@ -86,36 +86,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Second row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Brand Strategy Development</h3>
@@ -129,36 +104,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Third row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Marketing Strategy and Planning</h3>
@@ -170,31 +120,6 @@
                       implementing effective marketing initiatives.
                     </p>
                   </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
                 </div>
               </div>
             </div>
@@ -220,7 +145,7 @@
             </div>
             <!-- first row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">
@@ -237,36 +162,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Second row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Seamless Website Development</h3>
@@ -281,36 +181,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Third row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Integration and Automation</h3>
@@ -323,31 +198,6 @@
                       and measure performance.
                     </p>
                   </div>
-                </div>
-              </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
                 </div>
               </div>
             </div>
@@ -373,7 +223,7 @@
             </div>
             <!-- first row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Data Strategy Development</h3>
@@ -386,36 +236,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Second row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Data Integration and Warehousing</h3>
@@ -429,36 +254,11 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
 
             <!-- Third row -->
             <div class="row">
-              <div class="col-lg-8 col-sm-10">
+              <div class="col">
                 <div class="card">
                   <div class="card-body">
                     <h3 class="card-title">Data Analysis and Insights</h3>
@@ -472,31 +272,6 @@
                   </div>
                 </div>
               </div>
-
-              <div class="col-lg-4 col-sm-10">
-                <div class="card" id="card-right">
-                  <ul>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Market
-                      Research
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Messaging
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Positioning
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i
-                      >Persona/Segmentation
-                    </li>
-                    <li>
-                      <i class="fa fa-check" aria-hidden="true"></i>Portfolio
-                      Architecture
-                    </li>
-                  </ul>
-                </div>
-              </div>
             </div>
           </div>
         </div>
@@ -507,7 +282,7 @@
     <footer>
       <div class="container">
         <div class="row">
-          <div class="col-lg-8 col-sm-10">
+          <div class="col">
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
