--- a/features.html
+++ b/features.html
@@ -286,7 +286,7 @@
             <h5>Contact Us</h5>
             <h1>Let's talk</h1>
             <div class="footer-icons">
-              <a href="https://www.instagram.com/studioootb/"
+              <a href="https://www.instagram.com/studioootb/" target="_blank"
                 ><i class="fab fa-instagram"></i>Instagram</a
               >
             </div>
